--- a/01-MLOps Fundamentals/01-high-performance-python/high-performance-python.ipynb
+++ b/01-MLOps Fundamentals/01-high-performance-python/high-performance-python.ipynb
@@ -70,7 +70,7 @@
     "# Make a sample dataframe\n",
     "data = [\n",
     "    ['tom', 10], ['nick', 15],\n",
-    "    ['juli', 14], ['peter', 20],\n",
+    "    ['julia', 14], ['peter', 20],\n",
     "    ['jason', 27], ['anna', 11]\n",
     "]\n",
     "\n",
@@ -168,7 +168,7 @@
    },
    "outputs": [],
    "source": [
-    "# you can see that sometimes, two strings are concatnated w/o any `/n`\n",
+    "# you can see that sometimes, two strings are concatenated w/o any `/n`\n",
     "# this is because all the processes writes to stdout at the same time, we need\n",
     "# to find a way to prevent other processes write to it while one is doing\n",
     "from multiprocessing import Lock\n",
@@ -185,7 +185,7 @@
     "# Make a sample dataframe\n",
     "data = [\n",
     "    ['tom', 10], ['nick', 15],\n",
-    "    ['juli', 14], ['peter', 20],\n",
+    "    ['julia', 14], ['peter', 20],\n",
     "    ['jason', 27], ['anna', 11]\n",
     "]\n",
     "\n",
@@ -359,7 +359,7 @@
     "# as in multithreading\n",
     "import multiprocessing\n",
     "\n",
-    "# Define a shared value between oprocesses\n",
+    "# Define a shared value between processes\n",
     "shared_variable = multiprocessing.Value('i', 0)\n",
     "\n",
     "def worker_function():\n",
