--- a/01-MLOps Fundamentals/09-jenkins/notebooks/house_price_prediction.ipynb
+++ b/01-MLOps Fundamentals/09-jenkins/notebooks/house_price_prediction.ipynb
@@ -27,11 +27,11 @@
    },
    "outputs": [],
    "source": [
-    "# !pip install pandas\n",
-    "# !pip install openpyxl\n",
-    "# !pip install matplotlib seaborn\n",
-    "# !pip install scikit-learn\n",
-    "# !pip install lightgbm"
+    "!pip install pandas\n",
+    "!pip install openpyxl\n",
+    "!pip install matplotlib seaborn\n",
+    "!pip install scikit-learn\n",
+    "!pip install lightgbm"
    ]
   },
   {
